# Embodied-AI-DM

./: README.md  activate-backup.sh  pyproject.toml  test_service.sh  达妙机械臂服务器客户端接口文档.md
bash/: dual-record-dm.sh  dual_record_dm.sh  eval-dm.sh  eval_dk1.sh  eval_dm.sh  infer_dm.sh  record-dm.sh  record_dk1.sh  record_dm.sh  train-dm.sh  train_dk1.sh  train_dm.sh  usb-port-create.sh
description/fanuc_description/: package.xml
description/panda_description/: package.xml
devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
examples/: get_uvc_cam_idx.py  leader_test.py  read_motor_params.py  record_dk1.py  record_dk1.sh  teleop.py  uvc_cam_test.py
lerobot_robot_multi_robots/: __init__.py  config_dm_arm.py  config_dual_dm_arm.py  config_sim_robot.py  dm_arm.py  dual_dm_arm.py  sim_robot.py
scripts/: bi_teleop.py  calibration_follower.py  calibration_leader.py  data_meta.py  data_processer.py  dual_teleop.py  follower_test.py  get_uvc_cam_idx.py  infer_dm.py  infer_dm_act.py  infer_dm_kalman.py  inference_dm.py  leader_test.py  process_data.py  process_language.py  process_language_pre.py  process_meta.py  reset.py  teleop.py
src/dm_arm_controller/: CMakeLists.txt  package.xml
src/dm_arm_moveit_config/: .setup_assistant  package.xml
src/dm_arm_msgs_srvs/: CMakeLists.txt  package.xml
src/dm_arm_service/: CMakeLists.txt  package.xml
src/dm_ht_controller/: CMakeLists.txt  package.xml
src/pr2_arm_controller/: CMakeLists.txt  package.xml
test/: infer_dm_test.py  task_language_test.py
urdfTRLC/: CMakeLists.txt  package.xml
(+101 files in other folders)
