[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot_robot_multi_robots"
version = "0.1.0"
dependencies = [
    "numpy>=2.0.1",
    "pyserial>=3.5",
    "dynamixel-sdk>=3.7.31",
    "lerobot",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.2",
    "pandas>=2.2.0",
    "scipy>=1.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true